--- a/src/app/nav-bars/main-header/main-header.component.html
+++ b/src/app/nav-bars/main-header/main-header.component.html
@@ -1,19 +1,19 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand text-white" href="#">Logique a la Crabe</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/logic-gates">Logic Info</a>
+            <a class="nav-link text-white" routerLink="/logic-gates">Logic Info</a>
           </li>
           <li>
-            <a class="nav-link" href="#">Account</a>
+            <a class="nav-link text-white" href="#">Account</a>
           </li>
           <!--
           <li class="nav-item dropdown">
@@ -32,7 +32,6 @@
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
     </div>
