--- a/src/app/secondary-page/logic-gates/gate-info-card/gate-info-card.component.html
+++ b/src/app/secondary-page/logic-gates/gate-info-card/gate-info-card.component.html
@@ -1,9 +1,11 @@
-<div class="card" style="width: 18rem;">
-    <img class="card-img-top" src={{img}} alt="Card image cap">
+<div class="card" style="width: 25rem;">
+    <img class="card-img-top" src={{img}} alt="Card image">
     <div class="card-body">
       <h5 class="card-title">{{title}}</h5>
       <p class="card-text">{{text}}</p>
+      <div class ="d-flex justify-content-between">
+      <a href="#" class="btn btn-secondary">See Truth Table</a>
       <a href="#" class="btn btn-primary">See Example</a>
     </div>
+    </div>
   </div>
-  <!--Bootstrap not working properly even after install-->
