Started Implementing Drag and Drop

--- a/src/app/primary-page/gates/gates.component.html
+++ b/src/app/primary-page/gates/gates.component.html
@@ -1,3 +1,6 @@
 <h4 class="type">{{type}}</h4>
-<img class="picture" src={{pic}}>
+<div class="mx-5" style="background:white">
+    <img cdkDrag class="picture"src={{pic}}>
+</div>
+
 <p>Number of inputs: {{inputs}}</p>
