--- a/src/app/primary-page/primary-page.component.css
+++ b/src/app/primary-page/primary-page.component.css
@@ -9,7 +9,6 @@
     width: 20%;
     text-align: center;
     background-color: gray;
-    overflow-y: scroll;
 }
 .board{
     text-align: center;
@@ -20,4 +19,5 @@
 .gates{
     border: 1px solid black;
     background-color: #D4D9D8;
+    justify-content: center;
 }
