--- a/src/app/primary-page/primary-page.component.css
+++ b/src/app/primary-page/primary-page.component.css
@@ -1,23 +1,37 @@
 .header{
     text-align: center;
 }
-.page-container{
-    display: flex;
-    height: 500px;
-}
 .gate-list{
-    width: 20%;
+    position:absolute;
+    display: inline-block;
+    width: 15%;
+    height: 500px;
     text-align: center;
     background-color: gray;
+    overflow-y: scroll;
+    overflow-x: none;
 }
 .board{
+    position: absolute;
+    display: inline-block;
     text-align: center;
-    margin-left: 7%;
     background-color: bisque;
-    width: 60%;
+    width: 50%;
+    height: 500px;
 }
 .gates{
+    display: flex;
     border: 1px solid black;
     background-color: #D4D9D8;
     justify-content: center;
+}
+
+/* Stops the entire document from being selected when the image is dragged */
+body{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
