--- a/src/app/primary-page/primary-page.component.html
+++ b/src/app/primary-page/primary-page.component.html
@@ -1,17 +1,22 @@
-<h1 class="mt-5 header">Circuit Builder</h1>
+<HTML>
 
-<div class="page-container">
+<body onload="setCanvas()">
+    <h1 class="mt-5 header">Circuit Builder</h1>
+
     <div class="gate-list">
         <h3 class="mb-3">Gates</h3>
 
         <div class="mb-2 gates" *ngFor="let x of gates">
-            <app-gates type={{x.type}} pic={{x.pic}} inputs={{x.inputs}}>
-            </app-gates>
-          </div>
+            <app-gates type={{x.type}} pic={{x.pic}} inputs={{x.inputs}}></app-gates>
+        </div>
+
     </div>
 
-    <div class="board">
+
+    <div class="board" id="canvas">
+
         Board Placeholder
     </div>
+</body>
 
-</div>
+</HTML>
