--- a/src/app/primary-page/gates/gates.component.css
+++ b/src/app/primary-page/gates/gates.component.css
@@ -6,3 +6,11 @@
     width: 150px;
     height: 50px;
 }
+div, img{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
