--- a/src/app/primary-page/gates/gates.component.html
+++ b/src/app/primary-page/gates/gates.component.html
@@ -1,6 +1,6 @@
 <h4 class="type">{{type}}</h4>
-<div class="mx-5" style="background:white" id="holder">
-    <img onload="setDrag()" id="gate" class="picture" src={{pic}} draggable="false">
+<div class="mx-5" style="background:white" id="holder" draggable="false">
+    <img onload="setDrag(this.id)" id={{id}} class="picture" src={{pic}} draggable="false">
 </div>
 
 <p>Number of inputs: {{inputs}}</p>
