--- a/src/app/nav-bars/main-header/main-header.component.html
+++ b/src/app/nav-bars/main-header/main-header.component.html
@@ -13,7 +13,7 @@
             <a class="nav-link text-white" routerLink="/logic-gates">Logic Info</a>
           </li>
           <li>
-            <a class="nav-link text-white" href="#">Account</a>
+            <a class="nav-link text-white" href="Account">Account</a>
           </li>
           <!--
           <li class="nav-item dropdown">
