90% of Account page backend
login1.js, account-page.js, account-page-component.html

--- a/src/app/account-page/account-page-layout.component.html
+++ b/src/app/account-page/account-page-layout.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="layout container-fluid">
     <div class="account">
         <h5>Sign in or create an account!</h5>
@@ -6,26 +8,32 @@
         <div class="card" style="width: 25rem;">
             <div class="card-body">
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <label for="txtEmail" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="txtEmail" aria-describedby="emailHelp">
                 </div>
 
-                <label for="inputPassword5" class="form-label">Password</label>
-                <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
+                <label for="txtPassword" class="form-label">Password</label>
+                <input type="password" id="txtPassword" class="form-control" aria-describedby="passwordHelpBlock">
                 <p></p>
+              
                 <div class="d-flex justify-content-between">
-                    <a href="#" class="btn btn-primary">Sign In</a>
+                    <button id="btnLogin" type="button" class="button buttonBlue">Log in</button>
+                    
                 </div>
+
             </div>
         </div>
     </div>
+    <!--
+
+    
     <div class="account">
 
         <div class="card" style="width: 25rem;">
             <div class="card-body">
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <label for="exampleInputEmail2" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp">
                 </div>
 
                 <label for="inputPassword5" class="form-label">Password</label>
@@ -46,7 +54,8 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
 
-</div>
+</div> 
+
