--- a/src/app/module-list-page/module-list-page.component.html
+++ b/src/app/module-list-page/module-list-page.component.html
@@ -3,7 +3,7 @@
     <ol>
         <li class="list-element">Module: <a routerLink="/Binary">Binary</a></li>
         <li class="list-element"><a>Module:</a></li>
-        <li class="list-element"><a>Module:</a></li>
+        <li class="list-element">Module: <a routerLink="/NoiseMargins">Noise Margins</a> </li>
         <li class="list-element">Module: <a routerLink="/Transistors">PMOS, NMOS, and Truth Tables</a> </li>
     </ol>
 </body>
