Noise margin practice questions

--- a/src/app/noise-margins-module/noise-margins.component.html
+++ b/src/app/noise-margins-module/noise-margins.component.html
@@ -4,7 +4,8 @@
         <div class="intro">
             <h1>Noise Margins</h1>
             <p>
-                When signals are pushed through a current they can collect voltage noise by the signal either dropping or raising. 
+                When signals are pushed through a current they can collect voltage noise by the signal either dropping
+                or raising.
                 Noise margins are the area where signals can be pushed through a circuit safely.
             </p>
             <div class="figures">
@@ -32,7 +33,10 @@
                 To calculate the the noies margin high value use the formula... NMH = VOH - VIH
             </p>
             <p>
-                To calculate the noise margin low value use the formula... NML = VIH - VOL
+                To calculate the noise margin low value use the formula... NML = VIL - VOL
+            </p>
+            <p>
+                Both NMH and NML need to be postive for a gate to drive another gate
             </p>
             <p>
             <h3 class="mb-0">Ready to move on? Try the practice problems: </h3>
@@ -81,9 +85,11 @@
             </ul>
         </div>
     </div>
+    <div class="intro">
+        <p>
+            Image credited to https://vlsibasic.blogspot.com/2015/09/noise-margin.html
+        </p>
+
+    </div>
 
 </body>
-
-<p>
-    Image credited to https://vlsibasic.blogspot.com/2015/09/noise-margin.html
-</p>
