Converted images to SVGs

--- a/src/app/primary-page/menu-gates/gates.component.html
+++ b/src/app/primary-page/menu-gates/gates.component.html
@@ -1,6 +1,144 @@
 <h4 class="type">{{type}}</h4>
 <div class="mx-5" style="background:white" id="holder" draggable="false">
-    <img (mousedown)="dragdrop.drag($event, this.id)" id={{id}} class="picture" src={{pic}} draggable="false">
+    <!-- <img (mousedown)="dragdrop.drag($event, this.id)" id={{id}} class="picture" src={{pic}} draggable="false"> -->
+    <div id={{id}} (mousedown)="dragdrop.drag($event, this.id)" style="width:75px; height: 75px">
+        <svg [attr.viewBox]="viewbox" style="width:75px; height: 75px">
+            <use [attr.href]="svg"></use>
+        </svg>
+    </div>
+
 </div>
 
 <p>Number of inputs: {{inputs}}</p>
+
+<!--Below are template symbols for the gate images-->
+<svg style="width:0 ; height:0">
+    <symbol id="and">
+        <path stroke="#000" fill="#FFFFFF" stroke-linecap="square"
+            d="m44 44.094h-19v-25.998l19-0.002c7.176 0 13 5.824 13 13s-5.824 13-13 13zm13-13h9.056m-50.056-6.5h9m-9 13h9" />
+    </symbol>
+</svg>
+
+<svg style="width:0 ; height:0">
+    <symbol id="or">
+        <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="#FFFFFF">
+            <path d="M1318 3574 c-13 -28 -15 -18 45 -220 19 -66 39 -137 42 -157 l7 -37
+                -664 0 c-503 0 -667 -3 -676 -12 -18 -18 -14 -63 6 -81 17 -16 79 -17 690 -17
+                l672 0 5 -22 c42 -183 57 -538 31 -735 -9 -68 -21 -145 -27 -173 l-11 -50
+                -672 0 c-639 0 -674 -1 -689 -18 -20 -22 -22 -63 -5 -80 9 -9 173 -12 675 -12
+                478 0 663 -3 663 -11 0 -18 -29 -127 -66 -245 -38 -126 -41 -146 -18 -168 13
+                -14 63 -16 397 -16 389 0 489 7 654 45 273 62 565 208 784 392 104 87 180 167
+                359 381 l135 161 680 0 c750 1 725 -1 725 61 0 62 25 60 -725 60 l-680 1 -140
+                166 c-193 229 -262 301 -378 395 -277 222 -580 354 -927 403 -78 11 -205 15
+                -493 15 l-387 0 -12 -26z m787 -94 c418 -40 787 -208 1076 -492 106 -104 371
+                -417 367 -433 -7 -30 -348 -414 -433 -487 -278 -241 -613 -387 -977 -427 -54
+                -6 -232 -11 -397 -11 l-299 0 14 48 c112 368 163 698 149 972 -12 230 -69 535
+                -149 793 l-15 47 277 0 c152 0 327 -5 387 -10z" />
+        </g>
+    </symbol>
+</svg>
+
+<svg style="width:0 ; height:0">
+    <symbol id="nand">
+        <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none" >
+            <path d="M1023 3935 c-55 -24 -63 -53 -63 -245 l0 -170 -226 0 c-193 0 -230
+                -2 -254 -17 -58 -34 -68 -116 -21 -164 l29 -29 236 0 236 0 0 -750 0 -750
+                -236 0 -236 0 -29 -29 c-47 -48 -37 -130 21 -164 24 -15 61 -17 254 -17 l226
+                0 0 -170 c0 -136 3 -177 16 -201 30 -60 20 -59 738 -59 669 0 795 5 942 40
+                412 97 768 383 943 761 40 86 91 230 91 256 0 11 5 13 18 8 85 -38 130 -47
+                207 -43 137 8 252 83 311 204 l26 54 169 0 c183 0 223 8 253 51 21 30 21 88 0
+                118 -30 43 -70 51 -253 51 l-169 0 -26 54 c-34 69 -104 139 -174 173 -42 20
+                -74 28 -136 31 -77 4 -123 -5 -208 -43 -13 -5 -18 -3 -18 8 0 8 -12 50 -26 93
+                -175 530 -636 899 -1193 954 -59 6 -382 10 -760 10 -536 -1 -662 -3 -688 -15z
+                m1523 -220 c245 -43 454 -152 629 -329 157 -158 258 -338 313 -556 23 -92 26
+                -125 26 -270 0 -139 -4 -180 -23 -259 -109 -442 -419 -759 -860 -879 l-96 -26
+                -682 -4 -683 -3 0 1171 0 1170 644 0 c536 0 658 -3 732 -15z m1432 -1022 c96
+                -71 96 -195 2 -265 -65 -48 -171 -27 -217 44 -74 110 10 256 140 245 27 -2 60
+                -13 75 -24z" />
+        </g>
+    </symbol>
+</svg>
+
+<svg style="width:0 ; height:0">
+    <symbol id="nor">
+        <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
+            <path d="M1231 3514 c-29 -21 -27 -32 32 -234 l45 -155 -614 -5 c-670 -5 -634
+                -2 -634 -62 0 -15 6 -30 13 -35 6 -4 293 -10 637 -13 l625 -5 18 -105 c26
+                -149 28 -514 4 -655 -10 -55 -20 -108 -23 -117 -5 -17 -43 -18 -620 -18 -405
+                0 -622 -4 -635 -10 -12 -7 -19 -21 -19 -38 0 -60 -37 -57 634 -62 l614 -5 -45
+                -155 c-56 -192 -58 -200 -39 -225 14 -19 28 -20 278 -23 530 -6 761 32 1056
+                173 266 128 412 250 690 577 l83 97 36 -40 c69 -76 155 -102 248 -74 67 19
+                130 73 157 133 l19 42 394 0 c318 0 395 -3 395 -13 0 -30 61 -107 105 -132 64
+                -38 117 -48 182 -35 246 52 258 405 16 476 -67 20 -124 11 -192 -27 -50 -29
+                -111 -104 -111 -136 0 -10 -77 -13 -395 -13 l-394 0 -19 43 c-27 59 -90 113
+                -157 132 -93 28 -179 2 -247 -73 l-36 -40 -120 141 c-66 78 -158 178 -204 223
+                -190 185 -416 318 -680 402 -208 67 -352 82 -760 82 -273 0 -317 -2 -337 -16z
+                m902 -133 c292 -64 551 -196 769 -392 66 -59 378 -413 378 -429 0 -16 -322
+                -380 -386 -436 -195 -173 -407 -289 -654 -357 -167 -46 -280 -57 -599 -57
+                -160 0 -291 3 -291 6 0 3 20 79 44 167 145 530 135 884 -42 1510 -5 18 8 19
+                339 14 304 -4 355 -7 442 -26z m1509 -729 c43 -42 50 -112 16 -162 -32 -47
+                -63 -62 -121 -57 -38 3 -56 11 -80 36 -29 28 -32 38 -32 90 0 49 4 64 25 86
+                34 37 57 45 113 41 38 -2 55 -10 79 -34z m1249 15 c22 -15 39 -38 49 -65 48
+                -138 -137 -237 -227 -122 -30 37 -36 80 -18 125 30 81 124 110 196 62z" />
+        </g>>
+    </symbol>
+</svg>
+
+<svg style="width:0 ; height:0">
+    <symbol id="xor">
+        <path fill="#FFFFFF" stroke="#000" stroke-width="2" d="M70 25h25M30.38572 15H5M31.3621 35H5" />
+        <g fill-rule="evenodd">
+            <path
+                d="M24.25 42C22.65263 44.6444 22 45 22 45h-3.65625l2-2.4375S26 35.56245 26 25 20.34375 7.4375 20.34375 7.4375l-2-2.4375H22c.78125.9375 1.42188 1.65625 2.21875 3C26.09147 11.09981 29 17.02665 29 25c0 7.95065-2.8967 13.87942-4.75 17z" />
+            <path
+                d="M24.09375 5l2 2.4375S31.75 14.43755 31.75 25s-5.65625 17.5625-5.65625 17.5625l-2 2.4375H41.25c2.40808 0 7.6897.02451 13.625-2.40625s12.53654-7.34327 17.6875-16.875L71.25 25l1.3125-.71875C62.25939 5.21559 46.00657 5 41.25 5H24.09375zm5.875 3H41.25c4.68417 0 18.28685-.1302 27.96875 17C64.45196 33.42907 58.69747 37.68391 53.5 39.8125 48.13934 42.00792 43.65808 42 41.25 42H30c1.87359-3.10843 4.75-9.04935 4.75-17 0-7.97335-2.90853-13.90019-4.78125-17z" />
+        </g>
+    </symbol>
+</svg>
+
+<svg style="width:0 ; height:0">
+    <symbol id="xnor">
+        <path fill="none" stroke="#000" stroke-width="2" d="M78.333332 25H95M30.385717 15H5M31.362091 35H5" />
+        <g fill-rule="evenodd">
+            <path
+                d="M24.25 42.000005c-1.597374 2.6444-2.25 3-2.25 3h-3.65625l2-2.4375S26 35.562451 26 25c0-10.562451-5.65625-17.5625-5.65625-17.5625l-2-2.4375H22c.78125.9375 1.421875 1.65625 2.21875 3C26.091469 11.099815 29 17.026646 29 25c0 7.95065-2.896697 13.879425-4.75 17.000005z" />
+            <path
+                d="M24.09375 5l2 2.4375S31.75 14.437549 31.75 25s-5.65625 17.5625-5.65625 17.5625l-2 2.4375H41.25c2.408076.000001 7.689699.024514 13.625-2.40625s12.536536-7.343266 17.6875-16.875L71.25 25l1.3125-.71875C62.259387 5.21559 46.006574 5 41.25 5H24.09375zm5.875 3H41.25c4.684173 0 18.28685-.130207 27.96875 17C64.451964 33.429075 58.697469 37.68391 53.5 39.8125 48.139339 42.007924 43.658075 42.000001 41.25 42H30c1.873588-3.108434 4.75-9.04935 4.75-17 0-7.973354-2.908531-13.900185-4.78125-17z" />
+        </g>
+        <path fill="none" stroke="#000" stroke-width="3" d="M79 25a4 4 0 1 1-8 0 4 4 0 1 1 8 0z" />
+    </symbol>
+</svg>
+
+<svg style="width:0 ; height:0">
+    <symbol id="not">
+        <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
+            <path d="M1334 4039 c-11 -6 -28 -23 -37 -39 -15 -25 -17 -89 -17 -679 l0
+                -651 -430 0 c-473 0 -485 -1 -514 -59 -20 -38 -20 -64 0 -102 29 -58 41 -59
+                514 -59 l430 0 0 -651 c0 -593 1 -653 17 -680 20 -34 61 -53 105 -47 22 3 402
+                233 1086 656 579 359 1058 655 1065 657 6 3 22 -13 34 -34 28 -48 93 -103 159
+                -133 41 -19 66 -23 149 -23 89 0 106 3 156 28 67 32 152 119 180 182 l20 45
+                170 0 c183 0 222 8 253 51 21 30 21 88 0 118 -30 43 -70 51 -253 51 l-169 0
+                -26 53 c-33 68 -106 141 -176 175 -49 24 -66 27 -155 27 -83 0 -108 -4 -149
+                -23 -66 -30 -131 -85 -159 -133 -12 -21 -28 -37 -34 -34 -7 2 -489 299 -1071
+                660 -1112 688 -1086 674 -1148 644z m1130 -884 c525 -324 955 -592 955 -595 0
+                -5 -1901 -1182 -1919 -1188 -7 -2 -10 430 -10 1188 0 758 3 1190 10 1188 5 -1
+                439 -268 964 -593z m1514 -462 c96 -71 96 -195 2 -265 -65 -48 -171 -27 -217
+                44 -74 110 10 256 140 245 27 -2 60 -13 75 -24z" />
+        </g>
+    </symbol>
+</svg>
+
+<svg style="width:0 ; height:0">
+    <symbol id="buffer">
+        <g id="layer1" inkscape:label="Layer 1" inkscape:groupmode="layer" transform="translate(-170.71 -468.58)">
+            <g id="g3009" transform="translate(-109.29 77.143)">
+                <path id="path2999" d="m320 392.36v40l30-20z" style="stroke:#000000;stroke-width:1px;fill:none"
+                    inkscape:connector-curvature="0" />
+                <path id="path3001" d="m320 412.36h-40" style="stroke:#000000;stroke-width:1px;fill:none"
+                    inkscape:connector-curvature="0" />
+                <path id="path3003" d="m350 412.36h40" style="stroke:#000000;stroke-width:1px;fill:none"
+                    inkscape:connector-curvature="0" />
+            </g>
+        </g>
+    </symbol>
+</svg>
