Created template for transistor module

--- a/src/app/nav-bars/main-header/main-header.component.html
+++ b/src/app/nav-bars/main-header/main-header.component.html
@@ -15,6 +15,9 @@
           <li>
             <a class="nav-link text-white" href="Account">Account</a>
           </li>
+          <li>
+            <a class="nav-link text-white" routerLink="/Modules">Modules</a>
+          </li>
           <!--
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
