--- a/src/app/account-page/account-page-layout.component.css
+++ b/src/app/account-page/account-page-layout.component.css
@@ -1,16 +1,24 @@
-.account {
-    margin-top: .5in;
-    margin-left: .5in;
-    margin-right: .5in;
-}
+
 
 .card {
     background-color: whitesmoke;
-    margin-top: .5in;
-    margin-bottom: .5in;
+    margin-top: 100px;
+    margin-left: 30%;
 }
 
 .btn-primary {
     background-color: darkslategrey;
     border-color: darkslategrey;
+}
+
+#header{
+    background-color: lightskyblue;
+    color: black;
+}
+#body{
+    margin-left: 200px;
+}
+
+.modal-header{
+    background-color: lightskyblue;
 }
