Made logic gate module pretty

--- a/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.css
+++ b/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.css
@@ -2,6 +2,12 @@
     background-color: whitesmoke;
     margin-top: .5in;
     margin-bottom: .5in;
+    width: 25rem;
+    height: 27rem;
+}
+
+.card-img-top {
+    height: 25rem;
 }
 
 .btn-primary {
