--- a/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.html
+++ b/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.html
@@ -1,7 +1,7 @@
-<div class="card" style="width: 25rem;">
+<div class="card">
   <img class="card-img-top" src={{img}} alt="Card image">
   <div class="card-body">
-    <h5 class="card-title">{{title}}</h5>
+    <h2 class="card-title">{{title}}</h2>
     <p class="card-text">{{text}}</p>
     <div class="d-flex justify-content-between">
       <a href="#" class="btn btn-secondary">See Truth Table</a>
