--- a/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.css
+++ b/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.css
@@ -10,6 +10,11 @@
     height: 25rem;
 }
 
+.table {
+    height: 16rem;
+    width: 16rem;
+}
+
 .btn-primary {
     background-color: darkslategrey;
     border-color: darkslategrey;
