Created practice/quiz layout. unfinished

--- a/src/app/logic-gates-module/logic-gates/logic-gates-layout/logic-gates-layout.component.css
+++ b/src/app/logic-gates-module/logic-gates/logic-gates-layout/logic-gates-layout.component.css
@@ -3,3 +3,19 @@
     margin-left: .5in;
     margin-right: .5in;
 }
+
+.practice {
+    margin-top: .5in;
+    margin-left: .5in;
+    margin-right: .5in;
+    margin-bottom: .5in;
+}
+
+.btn-primary {
+    background-color: darkslategrey;
+    border-color: darkslategrey;
+}
+
+a {
+    color: white;
+}
