--- a/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.html
+++ b/src/app/logic-gates-module/logic-gates/gate-info-card/gate-info-card.component.html
@@ -4,7 +4,7 @@
     <h2 class="card-title">{{title}}</h2>
     <p class="card-text">{{text}}</p>
     <div class="d-flex justify-content-center">
-      <button class="btn btn-secondary mt-0" (click)="showTables()">See Truth Table</button>
+      <button class="btn btn-primary mt-0" (click)="showTables()">See Truth Table</button>
     </div>
     <div *ngIf="showTable">
       <img class="table" src={{table}} alt="table image">
