--- a/src/app/primary-page/primary-page.component.html
+++ b/src/app/primary-page/primary-page.component.html
@@ -1,4 +1,5 @@
-<HTML>
+<!DOCTYPE html>
+<html lang="en">
 
 <body (load)="setCanvas()">
     <h1 class="mt-5 header">Circuit Builder</h1>
@@ -20,4 +21,4 @@
     </div>
 </body>
 
-</HTML>
+</html>
